# okto-pulse

./: .dockerignore  .gitignore  .trivyignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_ROADMAP.md  KG_SEARCH_FALLBACK_SUMMARY.md  LICENSE  README.md  SECURITY.md  TRADEMARKS.md  build.sh  docker-compose.prod.yml  docker-compose.yml  okto-pulse.spec  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/replay-fixtures/: README.md  session_long.jsonl  session_short.jsonl
.github/workflows/: ci.yml  release.yml
deploy/: DEPLOY.md  docker-compose.yml  get_cred.py  rebuild.sh
docs/: e2e-0.2.0-sdlc-validation.md  kg-health.md
frontend/: .env.8900  .env.example  .env.production  Dockerfile  README.md  explore.spec.ts  explore2.spec.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  test_kg.spec.ts  vite.config.ts
frontend/benchmarks/: force-layout.md
frontend/docs/: kg-dashboard-a11y.md
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/adapters/: index.ts
frontend/src/adapters/auth/: index.ts  local.ts  types.ts
frontend/src/adapters/portal/: index.ts  standalone.ts  types.ts
frontend/src/components/analytics/: AnalyticsPage.tsx  BoardDashboard.tsx  Breadcrumb.tsx  DateFilter.tsx  EntityDetail.tsx  OverviewDashboard.tsx  analyticsIrOrCoverage.test.tsx  driftIcon.test.ts  driftIcon.ts  index.ts
frontend/src/components/architecture/: ArchitectureDiagramEditor.tsx  ArchitectureTab.tsx  ExcalidrawImportDialog.tsx  architectureVisualRegistry.ts  index.ts
frontend/src/components/banners/: EvidenceGateSkipBanner.test.tsx  EvidenceGateSkipBanner.tsx
frontend/src/components/board/: BoardSettingsForm.tsx  DefaultBoardConfigPanel.tsx  DesignSystemPanel.tsx
frontend/src/components/guided-help/: GuidedHelpPopover.tsx  GuidedHelpProvider.tsx  index.ts  positioning.ts  registry.ts  storage.ts  telemetry.ts  types.ts
frontend/src/components/guidelines/: GuidelinesPanel.tsx  index.ts
frontend/src/components/help/: HelpPanel.tsx
frontend/src/components/ideations/: CreateIdeationModal.tsx  IdeationModal.tsx  IdeationsPanel.tsx  index.ts
frontend/src/components/kanban/: CardKnowledgeTab.tsx  CardModal.tsx  CreateCardModal.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  PathBRemediationPanel.tsx  index.ts
frontend/src/components/knowledge/: AuditLogView.tsx  CandidateDecisionPanel.tsx  CanonicalPartitionIntegrityInspectorModal.test.tsx  CanonicalPartitionIntegrityInspectorModal.tsx  CognitiveActionCenterView.test.tsx  CognitiveActionCenterView.tsx  CognitivePendingBadge.tsx  DeadLetterInspectorModal.tsx  (+25 more)
frontend/src/constants/: kg.ts  terms.ts
frontend/src/contexts/: ApiContext.tsx  ModalStackContext.tsx
frontend/src/hooks/: useCandidateDecisions.ts  useCognitivePendingBadges.ts  useKgLiveEvents.ts  useListSearch.ts  usePermissions.ts  useTermsAcceptance.ts  useTheme.ts  useViewMode.ts
frontend/src/lib/: authFetch.ts  exportMarkdown.ts  getErrorMessage.ts  sanitizePreview.ts  useSafeAuth.ts
frontend/src/services/: api.ts  board-settings-api.ts  candidate-decisions-api.ts  cognitive-readiness-api.test.ts  cognitive-readiness-api.ts  dead-letter-api.ts  discovery-api.ts  kg-api.ts  kg-cognitive-pending-telemetry.ts  kg-health-api.ts  kg-tick-api.ts  metrics-api.ts  metrics-health-api.ts  permissions-api.ts  queue-health-api.ts  runtime-settings-api.ts  terms-acceptance-api.ts
frontend/src/store/: dashboard.ts
frontend/src/test/: setup.ts
frontend/src/types/: cognitive-readiness.ts  discovery.ts  index.ts  knowledge-graph.ts
frontend/tests/e2e/: graph-empty-states.spec.ts  graph-filters.spec.ts  graph-layout.spec.ts  graph-pagination.spec.ts  graph-selection.spec.ts  graph-tooltip.spec.ts  kg-canvas-auto-update.spec.ts  kg-health.spec.ts  onboarding.spec.ts
frontend/tests/unit/: forceLayout.bench.test.ts  forceLayout.test.ts
frontend/tests/visual/: architecture-visual-registry.spec.ts  graph-canvas.spec.ts
scripts/: build-community-release.sh  link_cards_to_sprint_and_scenarios.py  r05e_community_preservation_smoke.py  smoke_embedding.py
src/okto_pulse/community/: __init__.py  acceptance.py  auth.py  banner.txt  cli.py  config.py  main.py  runtime.py  seed.py  serve_lock.py
tests/: conftest.py  test_cli_init.py  test_cli_kg_backfill.py  test_cli_reset.py  test_cli_serve.py  test_cli_status.py  test_cli_version.py  test_metrics_cli.py  test_r01b_composition_no_fallback.py  test_r01b_engine_session_parity.py  test_r01b_unit_of_work_parity.py  test_r01c_imp4_schema_lifecycle_orchestrator.py  test_r02_imp1_attachment_storage_provider.py  test_r02_imp2_download_parity_and_streaming.py  test_r03_imp1_evidence_isolation.py  test_r05b_community_adapters.py  test_r05c_kg_adapters.py  test_r05d_data_adapters.py  test_r05e_imp2_community_preservation.py  test_r06_mcp_auth_context_community.py  test_r08_scheduler_control_adapter.py  test_r08a_mcp_auth_adapter.py  test_r08b_auth_context_registration.py  test_r08c_worker_registry.py  test_r10b_telemetry_store_adapter.py  test_r10c_telemetry_sender_adapter.py  test_r10d_product_health_adapters.py  test_r10e_telemetry_port_adapter.py  test_r11a_community_catalog.py  test_r11b_content_split.py  test_r11c_catalog_replay.py  test_r11d_capability_descriptors.py  test_r13_relational_dependency_preservation.py  test_r14_embedding_boundary.py  test_r15a_community_boundary_evidence.py  test_r15b_community_smoke_evidence.py  test_r16b_relational_schema_migrator.py  test_r16c_data_bootstrapper.py  test_r_p2_02_relational_parity.py  test_r_p2_03_community_providers.py  (+6 more)
tests/telemetry_behavioral/: conftest.py  test_r12_telemetry_state_carrier.py  test_r_p2_08_telemetry_state.py  test_telemetry_delta_batch.py  test_telemetry_event_emitters.py  test_telemetry_failure_state_r5a.py  test_telemetry_local_first.py  test_telemetry_product_snapshot.py  test_telemetry_publish_health_r5c.py  test_telemetry_publish_health_r5cc.py  test_telemetry_reason_codes.py  test_telemetry_retention.py  test_telemetry_token_lifecycle.py
tools/: mcp_replay.py
(+4445 files in other folders)
