[project]
name = "okto-pulse"
version = "0.1.0"
description = "Okto Pulse — spec-driven project management with AI agents via MCP. Local-first, single command setup."
requires-python = ">=3.11"
license = {text = "Elastic-2.0"}
authors = [
    {name = "Okto Labs", email = "contact@oktolabs.ai"},
]
keywords = [
    "kanban", "project-management", "mcp", "ai-agents", "spec-driven",
    "claude", "cursor", "windsurf", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "okto-pulse-core>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/okto-labs/okto-pulse"
Documentation = "https://github.com/okto-labs/okto-pulse#readme"
Repository = "https://github.com/okto-labs/okto-pulse"
Issues = "https://github.com/okto-labs/okto-pulse/issues"
Changelog = "https://github.com/okto-labs/okto-pulse/blob/main/CHANGELOG.md"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
okto-pulse = "okto_pulse.community.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okto_pulse"]

[tool.hatch.build.targets.wheel.force-include]
"src/okto_pulse/community/frontend_dist" = "okto_pulse/community/frontend_dist"
