[project]
name = "okto-pulse"
version = "0.1.11"
description = "Okto Pulse — spec-driven project management with AI agents via MCP. Local-first, single command setup."
requires-python = ">=3.11"
license = {text = "Elastic-2.0"}
authors = [
    {name = "Okto Labs", email = "dev@oktolabs.ai"},
]
keywords = [
    "kanban", "project-management", "mcp", "ai-agents", "spec-driven",
    "claude", "cursor", "windsurf", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Office/Business :: Scheduling",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
]
dependencies = [
    "okto-pulse-core>=0.1.6,<1.0.0",
    "sentence-transformers>=2.5.0,<6.0.0",
]

[project.urls]
Homepage = "https://github.com/okto-labs/okto-pulse"
Documentation = "https://github.com/okto-labs/okto-pulse#readme"
Repository = "https://github.com/okto-labs/okto-pulse"
Issues = "https://github.com/okto-labs/okto-pulse/issues"
Changelog = "https://github.com/okto-labs/okto-pulse/blob/main/CHANGELOG.md"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
okto-pulse = "okto_pulse.community.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okto_pulse"]
artifacts = [
    "src/okto_pulse/community/frontend_dist/assets/*.png",
    "src/okto_pulse/community/banner.txt",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/okto_pulse",
    "README.md",
    "LICENSE",
    "CLA.md",
    "TRADEMARKS.md",
]
artifacts = ["src/okto_pulse/community/frontend_dist/assets/*.png"]

[tool.uv]
# Use uv-managed lockfile for reproducible installs in CI/Docker.
# Generated with `uv lock`; refresh after editing dependencies.

[tool.uv.sources]
# Resolve okto-pulse-core from the sibling working copy during lock/sync.
# This matches the Docker build's wheel-builder layout, which COPYs both
# repos as siblings into /src. Required because PyPI lags behind the
# git tags this repo depends on (e.g. okto-pulse depends on
# okto-pulse-core>=0.1.6 but PyPI only has 0.1.5 published).
okto-pulse-core = { path = "../okto-pulse-core" }
